cmake_minimum_required(VERSION 3.26)
set(CMAKE_CXX_STANDARD 20)
project(Homework1)

add_executable(
    problem1 problem1.cpp homework1.hpp homework1.cpp
)

add_executable(
    problem2 problem2.cpp homework1.hpp homework1.cpp
)

add_executable(
    problem3 problem3.cpp homework1.hpp homework1.cpp
)

add_executable(
    problem4 problem4.cpp homework1.hpp homework1.cpp
)

add_executable(
    problem5 problem5.cpp homework1.hpp homework1.cpp
)

add_executable(
    problem6 problem6.cpp homework1.hpp homework1.cpp
)

add_executable(
    problem7 problem7.cpp homework1.hpp homework1.cpp
)